--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vite-project",
+  "homepage": "https://Mansisaraswat03.github.io/GramShikshaKendra",
   "private": true,
   "version": "0.0.0",
   "type": "module",
