--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "vite-project",
-  "homepage": "https:/Mansisaraswat03.github.io/GramShikshaKendra",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -16,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-player": "^2.13.0",
     "react-router-dom": "^6.15.0",
     "styled-components": "^6.0.7"
   },
@@ -27,7 +25,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "gh-pages": "^6.0.0",
     "vite": "^4.4.5"
   }
 }
